<resources>
  <string name="app_name">CouplesConnect</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="action_share">Share</string>
  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="fragment_home">Home</string>
  <string name="fragment_categories">Categories</string>
  <string name="fragment_subcategories">Subcategories</string>
  <string name="fragment_custom">Custom</string>
  <string name="fragment_question">Question</string>
  <string name="fragment_settings">Settings</string>
  <string name="fragment_temp">Temp</string>
  <string-array name="fragment_names">
	 <item>@string/fragment_home</item>
	 <item>@string/fragment_categories</item>
	 <item>@string/fragment_subcategories</item>
	 <item>@string/fragment_custom</item>
	 <item>@string/fragment_question</item>
	 <item>@string/fragment_settings</item>
	 <item>@string/fragment_temp</item>
  </string-array>
  <string name="category0">Conversations</string>
  <string name="category1">Dates &amp; Fun</string>
  <string name="category2">Intimacy Builder</string>
  <string name="category3">Sensual</string>
  <string-array name="category_names">
	 <item>@string/category0</item>
	 <item>@string/category1</item>
	 <item>@string/category2</item>
	 <item>@string/category3</item>
  </string-array>
  <string name="category_info0">Category 0 info</string>
  <string name="category_info1">Category 1 info</string>
  <string name="category_info2">Category 2 info</string>
  <string name="category_info3">Category 3 info</string>
  <string-array name="category_infos">
	 <item>@string/category_info0</item>
	 <item>@string/category_info1</item>
	 <item>@string/category_info2</item>
	 <item>@string/category_info3</item>
  </string-array>
  <string name="subcategory0">Life</string>
  <string name="subcategory1">Love</string>
  <string name="subcategory2">Relationships</string>
  <string name="subcategory3">Self</string>
  <string name="subcategory4">Religion</string>
  <string name="subcategory5">Government</string>
  <string name="subcategory6">Fun</string>
  <string name="subcategory7">Dates</string>
  <string name="subcategory8">Romantic Dates</string>
  <string name="subcategory9">Feelings</string>
  <string name="subcategory10">Contrast</string>
  <string name="subcategory11">Complaints</string>
  <string name="subcategory12">Love Language</string>
  <string name="subcategory13">Trauma</string>
  <string name="subcategory14">Childhood</string>
  <string name="subcategory15">Affirmations</string>
  <string name="subcategory16">Needs</string>
  <string name="subcategory17">Romance</string>
  <string name="subcategory18">Flirtation</string>
  <string name="subcategory19">Foreplay</string>
  <string name="subcategory20">Sex</string>
  <string-array name="subcategory_names">
	 <item>@string/subcategory0</item>
	 <item>@string/subcategory1</item>
	 <item>@string/subcategory2</item>
	 <item>@string/subcategory3</item>
	 <item>@string/subcategory4</item>
	 <item>@string/subcategory5</item>
	 <item>@string/subcategory6</item>
	 <item>@string/subcategory7</item>
	 <item>@string/subcategory8</item>
	 <item>@string/subcategory9</item>
	 <item>@string/subcategory10</item>
	 <item>@string/subcategory11</item>
	 <item>@string/subcategory12</item>
	 <item>@string/subcategory13</item>
	 <item>@string/subcategory14</item>
	 <item>@string/subcategory15</item>
	 <item>@string/subcategory16</item>
	 <item>@string/subcategory17</item>
	 <item>@string/subcategory18</item>
	 <item>@string/subcategory19</item>
	 <item>@string/subcategory20</item>
  </string-array>
  <string name="subcategory_info0">Life info</string>
  <string name="subcategory_info1">Love info</string>
  <string name="subcategory_info2">Relationships info</string>
  <string name="subcategory_info3">Self info</string>
  <string name="subcategory_info4">Religion info</string>
  <string name="subcategory_info5">Government info</string>
  <string name="subcategory_info6">Fun info</string>
  <string name="subcategory_info7">Dates info</string>
  <string name="subcategory_info8">Romantic Dates info</string>
  <string name="subcategory_info9">Feelings info</string>
  <string name="subcategory_info10">Contrast info</string>
  <string name="subcategory_info11">Complaints info</string>
  <string name="subcategory_info12">Love Language info</string>
  <string name="subcategory_info13">Trauma info</string>
  <string name="subcategory_info14">Childhood info</string>
  <string name="subcategory_info15">Affirmations info</string>
  <string name="subcategory_info16">Needs info</string>
  <string name="subcategory_info17">Romance info</string>
  <string name="subcategory_info18">Flirtation info</string>
  <string name="subcategory_info19">Foreplay info</string>
  <string name="subcategory_info20">Sex info</string>
  <string-array name="subcategory_infos">
	 <item>@string/subcategory_info0</item>
	 <item>@string/subcategory_info1</item>
	 <item>@string/subcategory_info2</item>
	 <item>@string/subcategory_info3</item>
	 <item>@string/subcategory_info4</item>
	 <item>@string/subcategory_info5</item>
	 <item>@string/subcategory_info6</item>
	 <item>@string/subcategory_info7</item>
	 <item>@string/subcategory_info8</item>
	 <item>@string/subcategory_info9</item>
	 <item>@string/subcategory_info10</item>
	 <item>@string/subcategory_info11</item>
	 <item>@string/subcategory_info12</item>
	 <item>@string/subcategory_info13</item>
	 <item>@string/subcategory_info14</item>
	 <item>@string/subcategory_info15</item>
	 <item>@string/subcategory_info16</item>
	 <item>@string/subcategory_info17</item>
	 <item>@string/subcategory_info18</item>
	 <item>@string/subcategory_info19</item>
	 <item>@string/subcategory_info20</item>
  </string-array>
  <string-array name="topic_names">
  <item>@string/Topic_0</item>
  <item>@string/Topic_1</item>
  <item>@string/Topic_2</item>
  <item>@string/Topic_3</item>
  <item>@string/Topic_4</item>
  <item>@string/Topic_5</item>
  <item>@string/Topic_6</item>
  <item>@string/Topic_7</item>
  <item>@string/Topic_8</item>
  <item>@string/Topic_9</item>
  <item>@string/Topic_10</item>
  <item>@string/Topic_11</item>
  <item>@string/Topic_12</item>
  <item>@string/Topic_13</item>
  <item>@string/Topic_14</item>
  <item>@string/Topic_15</item>
  <item>@string/Topic_16</item>
  <item>@string/Topic_17</item>
  <item>@string/Topic_18</item>
  <item>@string/Topic_19</item>
  <item>@string/Topic_20</item>
  <item>@string/Topic_21</item>
  <item>@string/Topic_22</item>
  <item>@string/Topic_23</item>
  <item>@string/Topic_24</item>
  <item>@string/Topic_25</item>
  <item>@string/Topic_26</item>
  <item>@string/Topic_27</item>
  <item>@string/Topic_28</item>
  <item>@string/Topic_29</item>
  <item>@string/Topic_30</item>
  <item>@string/Topic_31</item>
  <item>@string/Topic_32</item>
  <item>@string/Topic_33</item>
  <item>@string/Topic_34</item>
  <item>@string/Topic_35</item>
  <item>@string/Topic_36</item>
  <item>@string/Topic_37</item>
  <item>@string/Topic_38</item>
  <item>@string/Topic_39</item>
  <item>@string/Topic_40</item>
  <item>@string/Topic_41</item>
  <item>@string/Topic_42</item>
  <item>@string/Topic_43</item>
  <item>@string/Topic_44</item>
  <item>@string/Topic_45</item>
  <item>@string/Topic_46</item>
  <item>@string/Topic_47</item>
  <item>@string/Topic_48</item>
  <item>@string/Topic_49</item>
  <item>@string/Topic_50</item>
  <item>@string/Topic_51</item>
  <item>@string/Topic_52</item>
  <item>@string/Topic_53</item>
  <item>@string/Topic_54</item>
  <item>@string/Topic_55</item>
  <item>@string/Topic_56</item>
  <item>@string/Topic_57</item>
  <item>@string/Topic_58</item>
  <item>@string/Topic_59</item>
  <item>@string/Topic_60</item>
	 <item>@string/Topic_61</item>
</string-array>
  <string name="all">All</string>
  <string name="custom">Custom</string>
  <string name="ok">OK</string>
  <string name="share_subject">What are your thoughts on this: </string>
  <string name="share_intent">Share via</string>
  <string name="show_only">Show Only:</string>
  <string name="sort_by">Sort By:</string>
  <string name="shuffle_deck">Shuffle Deck</string>
  <string name="no_cat_turned_on">There is no content! You must select at least one category or subcategory in Custom page.</string>
  <string name="sort_id">ID/Category</string>
  <string name="sort_alphabetically">Alphabetically</string>
  <string name="sort_favorites">Favorites</string>
  <string name="sort_shuffle">Shuffle</string>
  <string name="filter_favorites">Favorites</string>
  <string name="filter_unrated">Unrated</string>
  <string name="filter_all">All</string>
  <string name="q000">This is a conversation Life question 0?</string>
  <string name="q001">This is a conversation Love question 0?</string>
  <string name="q002">This is a conversation Relationship question 0?</string>
  <string name="q003">This is a conversation Religion question 0?</string>
  <string name="q004">This is a conversation Self question 0?</string>
  <string name="q005">This is a conversation Government question 0?</string>
  <string name="q006">This is a date fun example 0.</string>
  <string name="q007">This is a date date example 0.</string>
  <string name="q008">This is a date romantic date example 0.</string>
  <string name="q009">This is an intimacy feeling discussion 0.</string>
  <string name="q010">This is an intimacy contrast discussion 0.</string>
  <string name="q011">This is an intimacy complaint discussion 0.</string>
  <string name="q012">This is an intimacy love language discussion 0.</string>
  <string name="q013">This is an intimacy childhood discussion 0.</string>
  <string name="q014">This is an intimacy trauma discussion 0.</string>
  <string name="q015">This is an intimacy affirmation discussion 0.</string>
  <string name="q016">This is an intimacy needs discussion 0.</string>
  <string name="q017">This is a sensual romance suggestion 0.</string>
  <string name="q018">This is a sensual flirtation suggestion 0.</string>
  <string name="q019">This is a sensual foreplay suggestion 0.</string>
  <string name="q020">This is a sensual sex suggestion 0.</string>
  <string name="q021">This is a conversation Life question 1?</string>
  <string name="q022">This is a conversation Love question 1?</string>
  <string name="q023">This is a conversation Relationship question 1?</string>
  <string name="q024">This is a conversation Religion question 1?</string>
  <string name="q025">This is a conversation Self question 1?</string>
  <string name="q026">This is a conversation Government question 1?</string>
  <string name="q027">This is a date fun example 1.</string>
  <string name="q028">This is a date date example 1.</string>
  <string name="q029">This is a date romantic date example 1.</string>
  <string name="q030">This is an intimacy feeling discussion 1.</string>
  <string name="q031">This is an intimacy contrast discussion 1.</string>
  <string name="q032">This is an intimacy complaint discussion 1.</string>
  <string name="q033">This is an intimacy love language discussion 1.</string>
  <string name="q034">This is an intimacy childhood discussion 1.</string>
  <string name="q035">This is an intimacy trauma discussion 1.</string>
  <string name="q036">This is an intimacy affirmation discussion 1.</string>
  <string name="q037">This is an intimacy needs discussion 1.</string>
  <string name="q038">This is a sensual romance suggestion 1.</string>
  <string name="q039">This is a sensual flirtation suggestion 1.</string>
</resources>