<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:tools="http://schemas.android.com/tools"
	 tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
	 <item
		  android:id="@+id/nav_home"
		  android:icon="@drawable/ic_menu_camera"
		  android:title="@string/menu_home" />
	 <item
		  android:id="@+id/nav_categories"
		  android:icon="@drawable/ic_menu_gallery"
		  android:title="@string/fragment_categories" />
	 <item
		  android:id="@+id/nav_subcategories"
		  android:icon="@drawable/ic_menu_slideshow"
		  android:title="@string/fragment_subcategories" />

	 <item
		  android:id="@+id/nav_questions"
		  android:icon="@drawable/ic_menu_slideshow"
		  android:title="@string/fragment_question" />

	 <item
		  android:id="@+id/nav_custom"
		  android:icon="@drawable/ic_menu_slideshow"
		  android:title="@string/fragment_custom" />

	 <item
		  android:id="@+id/nav_settings"
		  android:icon="@drawable/ic_menu_slideshow"
		  android:title="@string/fragment_settings" />

  </group>
</menu>