<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:layout_margin="10dp"
	 android:orientation="vertical">

  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:orientation="vertical">

	 <TextView
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:text="@string/sort_by"
		  android:textColor="@color/black"
		  android:textStyle="bold" />

	 <RadioGroup
		  android:id="@+id/dialog_sort_group"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content">

		<CheckBox
			 android:id="@+id/dialog_sort_id"
			 style="@style/SortCheckBox"
			 android:text="@string/sort_id" />

		<CheckBox
			 android:id="@+id/dialog_sort_alphabet"
			 style="@style/SortCheckBox"
			 android:text="@string/sort_alphabetically" />

		<CheckBox
			 android:id="@+id/dialog_sort_favorites"
			 style="@style/SortCheckBox"
			 android:text="@string/sort_favorites" />

		<CheckBox
			 android:id="@+id/dialog_sort_shuffle2"
			 style="@style/SortCheckBox"
			 android:text="@string/sort_shuffle" />

	 </RadioGroup>

<!--	 <LinearLayout-->
<!--		  android:layout_width="match_parent"-->
<!--		  android:layout_height="wrap_content"-->
<!--		  android:layout_marginTop="2dp"-->
<!--		  android:orientation="horizontal">-->

<!--		<ImageView-->
<!--			 android:id="@+id/dialog_sort_shuffle"-->
<!--			 android:layout_width="40dp"-->
<!--			 android:layout_height="40dp"-->
<!--			 android:layout_marginLeft="20dp"-->
<!--			 android:layout_marginRight="10dp"-->
<!--			 android:backgroundTint="@null"-->
<!--			 android:padding="5dp"-->
<!--			 android:soundEffectsEnabled="true"-->
<!--			 android:src="@drawable/im_dice" />-->

<!--		<TextView-->
<!--			 android:layout_width="wrap_content"-->
<!--			 android:layout_height="match_parent"-->
<!--			 android:gravity="center_vertical"-->
<!--			 android:text="@string/shuffle_deck"-->
<!--			 android:textColor="@color/black" />-->
<!--	 </LinearLayout>-->

	 <TextView
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="10dp"
		  android:text="@string/show_only"
		  android:textColor="@color/black"
		  android:textStyle="bold" />

	 <RadioGroup
		  android:id="@+id/dialog_filter_group"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content">

		<CheckBox
			 android:id="@+id/dialog_filter_favorites"
			 style="@style/SortCheckBox"
			 android:text="@string/filter_favorites" />

		<CheckBox
			 android:id="@+id/dialog_filter_unrated"
			 style="@style/SortCheckBox"
			 android:text="@string/filter_unrated" />

		<CheckBox
			 android:id="@+id/dialog_filter_all"
			 style="@style/SortCheckBox"
			 android:text="@string/filter_all" />

	 </RadioGroup>

	 <Button
		  android:id="@+id/dialog_sort_ok"
		  style="@style/ConfirmationButton"
		  android:text="@string/ok" />

  </LinearLayout>

</RelativeLayout>