<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:id="@+id/mobile_navigation"
	 app:startDestination="@+id/nav_home">

  <fragment
		android:id="@+id/nav_home"
		android:name="com.samuelriesterer.couplesconnect.fragments.FragmentHome"
		android:label="@string/fragment_home"
		tools:layout="@layout/fragment_home" />

  <fragment
		android:id="@+id/nav_categories"
		android:name="com.samuelriesterer.couplesconnect.fragments.FragmentCategories"
		android:label="@string/fragment_categories"
		tools:layout="@layout/fragment_categories" >
  </fragment>

  <fragment
		android:id="@+id/nav_subcategories"
		android:name="com.samuelriesterer.couplesconnect.fragments.FragmentSubcategories"
		android:label="@string/fragment_subcategories"
		tools:layout="@layout/fragment_subcategories" />

  <fragment
		android:id="@+id/nav_questions"
		android:name="com.samuelriesterer.couplesconnect.fragments.FragmentQuestion"
		android:label="@string/fragment_question"
		tools:layout="@layout/fragment_question" />

  <fragment
	 android:id="@+id/nav_custom"
		android:name="com.samuelriesterer.couplesconnect.fragments.FragmentCustom"
		android:label="@string/fragment_custom"
		tools:layout="@layout/fragment_custom" />

  <fragment
	 android:id="@+id/nav_settings"
		android:name="com.samuelriesterer.couplesconnect.fragments.FragmentSettings"
		android:label="@string/fragment_settings"
		tools:layout="@layout/fragment_settings" />

</navigation>