<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:id="@+id/main"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:orientation="vertical">

  <!--  Top Row-->
  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

	 <!--	 Feelings -->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_feelings"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory9" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_feelings"
			 android:src="@drawable/im_feelings" />

		<ImageView
			 android:id="@+id/subcategories_feelings_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_feelings"
			 android:layout_alignBottom="@+id/subcategories_intimacy_feelings"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

	 <!--	 Contrast -->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_contrast"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory10" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_contrast"
			 android:src="@drawable/im_contrast" />

		<ImageView
			 android:id="@+id/subcategories_contrast_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_contrast"
			 android:layout_alignBottom="@+id/subcategories_intimacy_contrast"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

  </LinearLayout>

  <!--  Middle Row-->
  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

	 <!--	 Complaints -->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_complaints"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory11" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_complaints"
			  />

		<ImageView
			 android:id="@+id/subcategories_complaints_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_complaints"
			 android:layout_alignBottom="@+id/subcategories_intimacy_complaints"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>
	 <!--	 Love Language -->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_language"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory12" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_language"
			 android:src="@drawable/im_lovelanguage" />

		<ImageView
			 android:id="@+id/subcategories_language_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_language"
			 android:layout_alignBottom="@+id/subcategories_intimacy_language"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

  </LinearLayout>

  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

	 <!--	 Trauma -->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_trauma"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory13" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_trauma"
			 android:src="@drawable/im_trauma" />

		<ImageView
			 android:id="@+id/subcategories_trauma_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_trauma"
			 android:layout_alignBottom="@+id/subcategories_intimacy_trauma"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

	 <!--	 Childhood-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_childhood"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory14" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_childhood"
			 android:src="@drawable/im_childhood" />

		<ImageView
			 android:id="@+id/subcategories_government_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_childhood"
			 android:layout_alignBottom="@+id/subcategories_intimacy_childhood"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

  </LinearLayout>

  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

	 <!--	 Trauma -->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_affirmations"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory15" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_affirmations"
			 android:src="@drawable/im_affirmations" />

		<ImageView
			 android:id="@+id/subcategories_affirmations_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_affirmations"
			 android:layout_alignBottom="@+id/subcategories_intimacy_affirmations"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

	 <!--	 Childhood-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_intimacy_needs"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_intimacy_sel"
			 android:text="@string/subcategory16" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_intimacy_needs"
			 android:src="@drawable/im_needs" />

		<ImageView
			 android:id="@+id/subcategories_needs_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_intimacy_needs"
			 android:layout_alignBottom="@+id/subcategories_intimacy_needs"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

  </LinearLayout>
  
</LinearLayout>