<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:id="@+id/main"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:orientation="vertical">

  <!--  Top Row-->
  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

	 <!--	 Life-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_conversations_life"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_conversations_sel"
			 android:text="@string/subcategory0" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_conversations_life"
			 android:src="@drawable/im_life" />

		<ImageView
			 android:id="@+id/subcategories_life_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_conversations_life"
			 android:layout_alignBottom="@+id/subcategories_conversations_life"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

	 <!--	 Love-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_conversations_love"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_conversations_sel"
			 android:text="@string/subcategory1" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_conversations_love"
			 android:src="@drawable/im_love" />

		<ImageView
			 android:id="@+id/subcategories_love_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_conversations_love"
			 android:layout_alignBottom="@+id/subcategories_conversations_love"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

  </LinearLayout>

  <!--  Second Row-->
  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

	 <!--	 Relationships-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_conversations_relationships"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_conversations_sel"
			 android:text="@string/subcategory2" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_conversations_relationships"
			 android:src="@drawable/im_relationships" />

		<ImageView
			 android:id="@+id/subcategories_relationships_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_conversations_relationships"
			 android:layout_alignBottom="@+id/subcategories_conversations_relationships"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>
	 <!--	 Self-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_conversations_self"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_conversations_sel"
			 android:text="@string/subcategory3" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_conversations_self"
			 android:src="@drawable/im_self" />

		<ImageView
			 android:id="@+id/subcategories_self_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_conversations_self"
			 android:layout_alignBottom="@+id/subcategories_conversations_self"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

  </LinearLayout>

  <!--  Third Row-->

  <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

	 <!--	 Religion-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_conversations_religion"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_conversations_sel"
			 android:text="@string/subcategory4" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_conversations_religion"
			 android:src="@drawable/im_religion" />

		<ImageView
			 android:id="@+id/subcategories_religion_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_conversations_religion"
			 android:layout_alignBottom="@+id/subcategories_conversations_religion"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>
	 <!--	 Government-->
	 <RelativeLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:layout_weight="1">

		<TextView
			 android:id="@+id/subcategories_conversations_government"
			 style="@style/SubcategoryHeading"
			 android:background="@drawable/category_conversations_sel"
			 android:text="@string/subcategory5" />

		<ImageView
			 style="@style/SubcategoryIcon"
			 android:layout_alignBottom="@+id/subcategories_conversations_government"
			 android:src="@drawable/im_government" />

		<ImageView
			 android:id="@+id/subcategories_government_question"
			 style="@style/CategoryQuestionIconSmall"
			 android:layout_alignRight="@+id/subcategories_conversations_government"
			 android:layout_alignBottom="@+id/subcategories_conversations_government"
			 android:src="@drawable/im_question" />

	 </RelativeLayout>

  </LinearLayout>

</LinearLayout>